<resources>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="top_background_desc">Top background image</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_tracker">Tracker</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_progress">Progress</string>
    <string name="return_home">Return Home</string>
    <string name="settings">Settings</string>
    <string name="accessibility">Accessibility</string>
    <string name="personal_information">Personal Information</string>
    <string name="notifications">Notifications</string>
    <string name="bio">Bio</string>
    <string name="title_placeholder">Title</string>
    <string name="user_placeholder">User</string>
    <string name="posts_info_placeholder">Post Information Placeholder</string>
    <string name="action_account">Account</string>
    <string name="action_account_message">Account Default Message</string>
    <string name="prof_img_desc1">Profile</string>
    <string name="app_name">TeamFitness</string>

    <string name="milestone_posts_subtitle_placeholder">(60 min)</string>
    <string name="milestone_workout_title_placeholder">Jogging</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="back_to_login_sign_up">Back to Login</string>



    <string name="amount">Amount</string>
    <string name="time">Time</string>
    <string name="notes">Notes</string>

    <string name="fab_desc">floating button description</string>

    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet,
    consectetur adipiscing elit. Praesent ultrices congue rutrum.
    Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend
    eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum
    blandit, dolor diam fringilla tellus, eu euismod mauris neque
    at neque.</string>

    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet,
    consectetur adipiscing elit. Praesent ultrices congue rutrum.
    Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend
    eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum
    blandit, dolor diam fringilla tellus, eu euismod mauris neque
    at neque.</string>

    <string-array name="posts_titles">
        <item>Workout Routine Title 1</item>
        <item>Workout Routine Title 2</item>
        <item>Workout Routine Title 3</item>
        <item>Workout Routine Title 4</item>
        <item>Workout Routine Title 5</item>
        <item>Workout Routine Title 6</item>
        <item>Workout Routine Title 7</item>
        <item>Workout Routine Title 8</item>
    </string-array>

    <!--    <string-array name="posts_info">-->
    <!--        <item>Post Info 1</item>-->
    <!--        <item>Post Info 2</item>-->
    <!--        <item>Post Info 3</item>-->
    <!--        <item>Post Info 4</item>-->
    <!--        <item>Post Info 5</item>-->
    <!--        <item>Post Info 6</item>-->
    <!--        <item>Post Info 7</item>-->
    <!--    </string-array>-->

    <!--    <array name="posts_images">-->
    <!--        <item>@drawable/img_running</item>-->
    <!--        <item>@drawable/img_running</item>-->
    <!--        <item>@drawable/img_running</item>-->
    <!--        <item>@drawable/img_running</item>-->
    <!--        <item>@drawable/img_running</item>-->
    <!--        <item>@drawable/img_running</item>-->
    <!--        <item>@drawable/img_running</item>-->
    <!--        <item>@drawable/img_running</item>-->
    <!--        <item>@drawable/img_running</item>-->
    <!--        <item>@drawable/img_running</item>-->
    <!--    </array>-->

    <!--    Used for milestones  -->
    <array name="milestone_posts_images">
        <item>@drawable/img_milestonedefault</item>
        <item>@drawable/img_milestonedefault</item>
        <item>@drawable/img_milestonedefault</item>
        <item>@drawable/img_milestonedefault</item>
        <item>@drawable/img_milestonedefault</item>
        <item>@drawable/img_milestonedefault</item>
        <item>@drawable/img_milestonedefault</item>
        <item>@drawable/img_milestonedefault</item>
        <item>@drawable/img_milestonedefault</item>
        <item>@drawable/img_milestonedefault</item>
    </array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="fab_desc_workoutroutine">FAB workout routine description</string>
    <string name="fab_desc_post">fab description post</string>

    <!-- Workout Routine Place holder Data -->
    <string name="workout_name_1">Morning Run</string>
    <string name="duration_1">30 mins</string>
    <string name="distance_1">6 km</string>
    <string name="weight_1">N/A</string>
    <string name="sets_1">N/A</string>
    <string name="reps_1">N/A</string>

    <string name="workout_name_2">Incline Bench Press</string>
    <string name="duration_2">N/A</string>
    <string name="distance_2">N/A</string>
    <string name="weight_2">50 kg</string>
    <string name="sets_2">3 sets</string>
    <string name="reps_2">10 reps</string>

    <string name="workout_name_3">Squats</string>
    <string name="duration_3">N/A</string>
    <string name="distance_3">N/A</string>
    <string name="weight_3">60 kg</string>
    <string name="sets_3">5 sets</string>
    <string name="reps_3">15 reps</string>
    <string name="high_contrast">High Contrast</string>
    <string name="accessibility_settings">Accessibility Settings</string>
    <string name="dark">Dark</string>
    <string name="yrinfo">Tell us about yourself</string>
    <string name="my_bio">My Bio</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="tap_to_change_profile_picture">Tap to change profile picture</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="save">Save</string>

</resources>