<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbkg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.myapplication.MainActivity">

    <TextView
        android:id="@+id/loginText3"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Total Fitness"
        android:textAlignment="center"
        android:textColor="#3963d5"
        android:textColorLink="#3963d5"
        android:textSize="55sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="#f65f44"
                android:textColorLink="#f65f44"
                android:textSize="36sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#f65f44"
                android:text="@string/confirm_email"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/loginButtonVerification"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#3963d5"
                android:text="@string/back_to_login"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>